Refactor Terraform configuration and enhance S3 bucket settings
- Updated VPC and EKS module sources to specific GitHub commits for better version control.
- Enabled versioning on the S3 bucket for asset replication.
- Added source selection criteria for S3 bucket replication to handle KMS encrypted objects.
- Specified KMS key for replication destination encryption.
- Removed redundant server-side encryption configuration to ensure only KMS encryption is applied.

Update Vite configuration to suppress specific warnings

- Added logic to suppress sourcemap warnings in Rollup.
- Enhanced warning suppression for externalized browser compatibility and Unocss icon warnings.

--- a/.github/workflows/dependency-scan.yml
+++ b/.github/workflows/dependency-scan.yml
@@ -61,4 +61,4 @@ jobs:
         run: uv pip install --upgrade pip pip-audit
 
       - name: Run pip-audit
-        run: uv run pip-audit
+        run: uv run pip-audit --format=columns
