--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -14,4 +14,12 @@ RUN mkdir -p /var/log/nginx
 
 EXPOSE 80 443
 
+# Add a dedicated non-root user, fix ownership for NGINX directories
+RUN adduser -D -g '' nginxuser && \
+    chown -R nginxuser /etc/nginx /var/log/nginx /etc/nginx/ssl
+
+USER nginxuser
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 CMD curl --fail http://localhost:80/ || exit 1
+
 CMD ["nginx", "-g", "daemon off;"]
