--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,6 @@ variables:
   DOCKER_TLS_CERTDIR: "/certs"
   CONTAINER_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
   CONTAINER_IMAGE_LATEST: $CI_REGISTRY_IMAGE:latest
-  # Disable automatic Git clone to avoid HTTPS issues
-  GIT_STRATEGY: none
   # Force SSH URL for repository checkout
   CI_REPOSITORY_URL: git@git.pixelatedempathy.tech:pixeltech/pixelated.git
 
@@ -41,8 +39,12 @@ validate-runner:
   variables:
     DOCKER_DRIVER: overlay2
   script:
+    - set -e
     - echo "Validating GitLab runner capabilities..."
     - apk add --no-cache openssh-client git
+    - if ! command -v docker &> /dev/null; then
+        echo "Docker not found or failed to install." ; exit 1
+      fi
     - docker --version
     - docker info
     - echo "Docker is available and working"
