feat(helm): Update Chart.yaml and values.yaml for Pixelated Empathy application
- Corrected home URL and GitHub source link in Chart.yaml
- Replaced nginx-ingress with caddy-ingress-controller in dependencies
- Added values.yaml with PostgreSQL, Redis, and Caddy Ingress Controller configurations
- Configured Caddy for API and static asset handling with security and logging features

chore(infra): Upgrade Azure Container Registry and App Service Plan

- Updated ACR resource API version
- Changed App Service Plan to PremiumV3 with increased capacity and zone redundancy
- Enabled client certificate authentication and disabled public network access for App Service

feat(scripts): Add script to create production package.json

- Introduced create-prod-package.js to generate a production-ready package.json with core dependencies

fix(ai): Conditional audit logging in BiasDetectionEngine

- Added check for auditLogging config before storing analysis results

fix(analytics): Correct Redis client method calls in AnalyticsService

- Fixed method names from lrange to lRange and zrange to zRange for consistency with Redis client

feat(terraform): Implement RDS parameter group for enhanced logging

- Added aws_db_parameter_group resource for PostgreSQL with detailed logging settings
- Updated aws_db_instance to use the new parameter group

chore(terraform): Extend variables.tf with additional parameters

- Added variables for S3 replication, logging, and KMS keys for RDS and Redis

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ validate-runner:
   script:
     - set -e
     - echo "Validating GitLab runner capabilities..."
-    - apt-get update -y && apt-get install -y openssh-client git
+    - apk add --no-cache openssh-client git
     - if ! command -v docker &> /dev/null; then
         echo "Docker not found or failed to install." ; exit 1
       fi
