--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,7 @@ stages:
         pool:
           name: "Default"
         steps:
+          - checkout: self
           - task: NodeTool@0
             displayName: Use Node.js $(nodeVersion)
             inputs:
@@ -195,7 +196,7 @@ stages:
           name: "azure-infrastructure"
         pool:
           name: "Default"
-        container: mcr.microsoft.com/azure-cli@sha256:eb77b4c7844d8a6c7e8a7ba0a3f1041c5b8359af52d7cffc3c6b6fa804a82940
+        container: mcr.microsoft.com/azure-cli:latest
         strategy:
           runOnce:
             deploy:
@@ -293,7 +294,7 @@ stages:
         displayName: Build and Push Docker Image
         pool:
           name: "Default"
-        container: mcr.microsoft.com/azure-cli@sha256:eb77b4c7844d8a6c7e8a7ba0a3f1041c5b8359af52d7cffc3c6b6fa804a82940
+        container: mcr.microsoft.com/azure-cli:latest
         steps:
           - script: |
               set -e
@@ -561,7 +562,7 @@ stages:
           name: azure-production
         pool:
           name: "Default"
-        container: mcr.microsoft.com/azure-cli@sha256:eb77b4c7844d8a6c7e8a7ba0a3f1041c5b8359af52d7cffc3c6b6fa804a82940
+        container: mcr.microsoft.com/azure-cli:latest
         strategy:
           runOnce:
             deploy:
@@ -832,7 +833,7 @@ stages:
           name: azure-production
         pool:
           name: "Default"
-        container: mcr.microsoft.com/azure-cli@sha256:eb77b4c7844d8a6c7e8a7ba0a3f1041c5b8359af52d7cffc3c6b6fa804a82940
+        container: mcr.microsoft.com/azure-cli:latest
         strategy:
           runOnce:
             deploy:
