--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ dependencies = [
   "llama-cpp-python>=0.2.90",
   "gguf>=0.10.0",
   "ruff>=0.12.5",
+  "yamllint>=1.37.1",
 ]
 
 [project.optional-dependencies]
@@ -157,7 +158,7 @@ show_missing = true
 skip_covered = true
 
 [tool.uv.workspace]
-members = ["./", "ai"]
+members = ["./"]
 
 [tool.uv]
 index-strategy = "unsafe-best-match"
