--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ validate-runner:
 # Build frontend container
 build-frontend:
   stage: build
-  image: docker:24.0.5
+  image: ubuntu:latest
   services:
     - name: docker:24.0.5-dind
       alias: docker
